# ATS-docling-rag-agent

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  QUICK_REFERENCE.md  README.md  SOURCE_CODE_SETUP.md  check_db.py  cli.py  pyproject.toml  rag_agent.py
ingestion/: code_indexer.py  embedder.py  ingest.py
sql/: schema.sql
utils/: providers.py
